# langchain_scayle

./: .gitignore  README.md  TEST_RESULTS.md  examples_time_decorator.py  main.py  pyproject.toml
src/langchain_scayle/: __init__.py  llm.py  openai.py  utils.py
tests/: README.md  conftest.py  test_basic_functionality.py  test_connection.py  test_model_status.py  test_scayle_llm.py  test_structured_output.py  test_tool_calling.py  test_tool_loop.py
